Working modulith with multiple instances of invoice
